update content int06-5, int06-5-1, int06-5-2 pages

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/check-withdrawal/check-overtime-com-withdrawal/check-overtime-com-withdrawal-display/check-overtime-com-withdrawal-display.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/check-withdrawal/check-overtime-com-withdrawal/check-overtime-com-withdrawal-display/check-overtime-com-withdrawal-display.component.html
@@ -163,23 +163,23 @@
             <tr>
               <td style="text-align: left;">นายซี วันพุธ</td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
+                <img class="image-width" src="assets/images/square.JPG">
                 <br>
                 <span style="font-size: 11px;">16.30-20.30</span>
               </td>
               <td></td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
+                <img class="image-width" src="assets/images/square.JPG">
                 <br>
                 <span style="font-size: 11px;">16.30-20.30</span>
               </td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
+                <img class="image-width" src="assets/images/square.JPG">
                 <br>
                 <span style="font-size: 11px;">8.30-16.30</span>
               </td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
+                <img class="image-width" src="assets/images/square.JPG">
                 <br>
                 <span style="font-size: 11px;">8.30-17.00</span>
               </td>
@@ -195,19 +195,19 @@
               <td></td>
               <td></td>
               <td>
-                <img class="image-width-16" src="assets/images/moon.JPG">
+                <img class="image-width" src="assets/images/moon.JPG">
                 <br>
-                <img class="image-width-16" src="assets/images/flower.JPG">
+                <img class="image-width" src="assets/images/flower.JPG">
               </td>
               <td>
                 <img class="image-width-18" src="assets/images/full-moon.JPG">
               </td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
+                <img class="image-width" src="assets/images/square.JPG">
                 <br>
                 <span style="font-size: 11px;">16.30-20.30</span>
                 <br>
-                <img class="image-width-16" src="assets/images/flower.JPG">
+                <img class="image-width" src="assets/images/flower.JPG">
               </td>
               <td></td>
               <td>
@@ -223,12 +223,12 @@
               <td style="text-align: left;">นายดี วันพฤหัสบดี</td>
               <td></td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
+                <img class="image-width" src="assets/images/square.JPG">
                 <br>
                 <span style="font-size: 11px;">16.30-20.30</span>
               </td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
+                <img class="image-width" src="assets/images/square.JPG">
                 <br>
                 <span style="font-size: 11px;">16.30-20.30</span>
               </td>
@@ -238,22 +238,22 @@
                 <img class="image-width-18" src="assets/images/full-moon.JPG">
               </td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
+                <img class="image-width" src="assets/images/square.JPG">
                 <br>
                 <span style="font-size: 11px;">16.30-20.30</span>
                 <br>
-                <img class="image-width-16" src="assets/images/flower.JPG">
+                <img class="image-width" src="assets/images/flower.JPG">
               </td>
               <td></td>
               <td></td>
               <td></td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
+                <img class="image-width" src="assets/images/square.JPG">
                 <br>
                 <span style="font-size: 11px;">16.30-20.30</span>
               </td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
+                <img class="image-width" src="assets/images/square.JPG">
                 <br>
                 <span style="font-size: 11px;">16.30-20.30</span>
               </td>
