--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/check-withdrawal/int06-5/int06-5-2/int06-5-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/check-withdrawal/int06-5/int06-5-2/int06-5-2.component.html
@@ -211,8 +211,6 @@
               <td>
                 <img class="image-width-16" src="assets/images/square.JPG">
                 <br>
-                <span style="font-size: 11px;">16.30-20.30</span>
-                <br>
                 <img class="image-width-16" src="assets/images/flower.JPG">
               </td>
               <td></td>
@@ -227,48 +225,42 @@
             </tr>
             <tr>
               <td style="text-align: left;">นายดี วันพฤหัสบดี</td>
-              <td></td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
-                <br>
-                <span style="font-size: 11px;">16.30-20.30</span>
+                <img class="image-width" src="assets/images/triangle.JPG">
               </td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
-                <br>
-                <span style="font-size: 11px;">16.30-20.30</span>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
               </td>
               <td></td>
               <td></td>
               <td>
-                <img class="image-width-18" src="assets/images/full-moon.JPG">
+                <img class="image-width" src="assets/images/full-moon.JPG">
               </td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
+                <img class="image-width" src="assets/images/triangle.JPG">
                 <br>
-                <span style="font-size: 11px;">16.30-20.30</span>
-                <br>
-                <img class="image-width-16" src="assets/images/flower.JPG">
+                <img class="image-width" src="assets/images/flower.JPG">
               </td>
               <td></td>
               <td></td>
               <td></td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
-                <br>
-                <span style="font-size: 11px;">16.30-20.30</span>
+                <img class="image-width" src="assets/images/square.JPG">
               </td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
-                <br>
-                <span style="font-size: 11px;">16.30-20.30</span>
+                <img class="image-width" src="assets/images/square.JPG">
               </td>
               <td></td>
               <td></td>
-              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
               <td></td>
               <td>
-                <img class="image-width-18" src="assets/images/flower.JPG">
+                <img class="image-width" src="assets/images/flower.JPG">
               </td>
               <td></td>
               <td></td>
@@ -285,7 +277,9 @@
           หมายเหตุ*
         </div>
         <div class="six wide column">
-          ปฏิบัติงานนอกเวลา
+          เบิกค่าตอบแทนบุคคลหรือคณะกรรมการ
+          <img src="assets/images/triangle.JPG">
+          <br> ปฏิบัติงานนอกเวลา
           <img src="assets/images/square.JPG">
           <br> เดินทางไปราชการอื่น
           <img src="assets/images/moon.JPG">
