rename file check-expense-withdrawal to int06-1

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -54,7 +54,7 @@
                     <i class="dropdown icon"></i>
                     ตรวจเบิกจ่าย
                     <div class="menu">
-                        <a class="item" [routerLink]="['/check-expense-withdrawal']" routerLinkActive="active">ตรวจค่าใช้จ่าย</a>
+                        <a class="item" [routerLink]="['/int06-1']" routerLinkActive="active">ตรวจค่าใช้จ่าย</a>
                         <a class="item" [routerLink]="['/check-summary-withdrawal']" routerLinkActive="active">ตรวจสรุปรายการขอเบิก</a>
                         <a class="item" [routerLink]="['/check-allowance-withdrawal']" routerLinkActive="active">ตรวจสอบการเบิกค่าเบี้ยเลี้ยง</a>
                         <a class="item" [routerLink]="['/check-overtime-com-withdrawal']" routerLinkActive="active">ตรวจสอบการเบิกค่าตอบแทนปฏิบัติงานนอกเวลาราชการ</a>
