--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/check-withdrawal/int06-3/int06-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/check-withdrawal/int06-3/int06-3.component.html
@@ -52,7 +52,7 @@
       <br>
       <div class="ui center aligned grid">
         <div class="eight wide column">
-          <button class="ui mini primary button width-100" routerLink="/check-allowance-withdrawal-calendar">
+          <button class="ui mini primary button width-100" routerLink="/int06-3-1">
             <i class="external icon"></i>
             ตกลง
           </button>
