--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/check-withdrawal/int06-3/int06-3-1/int06-3-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/check-withdrawal/int06-3/int06-3-1/int06-3-1.component.html
@@ -76,7 +76,7 @@
       </div>
       <div class="ui center aligned grid">
         <div class="eight wide column">
-          <button class="ui mini primary button width-100" routerLink="/check-allowance-withdrawal-display">
+          <button class="ui mini primary button width-100" routerLink="/int06-3-2">
             <i class="save icon"></i>
             บันทึก
           </button>
