rename file check-overtime-com-withdrawal to int06-4

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/check-withdrawal/int06-4/int06-4-2/int06-4-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/check-withdrawal/int06-4/int06-4-2/int06-4-2.component.html
@@ -71,7 +71,7 @@
             <tr>
               <td style="text-align: left;">นายวรชิต วันจันทร์</td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
+                <img class="image-width" src="assets/images/square.JPG">
                 <br>
                 <span style="font-size: 11px;">16.30-20.30</span>
               </td>
@@ -80,23 +80,23 @@
               <td></td>
               <td></td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
+                <img class="image-width" src="assets/images/square.JPG">
                 <br>
                 <span style="font-size: 11px;">16.30-20.30</span>
                 <br>
-                <img class="image-width-16" src="assets/images/moon.JPG">
+                <img class="image-width" src="assets/images/moon.JPG">
               </td>
               <td></td>
               <td></td>
               <td></td>
               <td></td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
+                <img class="image-width" src="assets/images/square.JPG">
                 <br>
                 <span style="font-size: 11px;">8.30-16.30</span>
               </td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
+                <img class="image-width" src="assets/images/square.JPG">
                 <br>
                 <span style="font-size: 11px;">8.30-16.30</span>
               </td>
@@ -107,11 +107,11 @@
               </td>
               <td></td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
+                <img class="image-width" src="assets/images/square.JPG">
                 <br>
                 <span style="font-size: 11px;">16.30-20.30</span>
                 <br>
-                <img class="image-width-16" src="assets/images/full-moon.JPG">
+                <img class="image-width" src="assets/images/full-moon.JPG">
               </td>
               <td></td>
               <td></td>
@@ -124,17 +124,17 @@
               <td></td>
               <td></td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
+                <img class="image-width" src="assets/images/square.JPG">
                 <br>
                 <span style="font-size: 11px;">16.30-20.30</span>
               </td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
+                <img class="image-width" src="assets/images/square.JPG">
                 <br>
                 <span style="font-size: 11px;">8.30-16.30</span>
               </td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
+                <img class="image-width" src="assets/images/square.JPG">
                 <br>
                 <span style="font-size: 11px;">8.30-17.00</span>
               </td>
