--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/check-withdrawal/int06-4/int06-4-1/int06-4-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/check-withdrawal/int06-4/int06-4-1/int06-4-1.component.html
@@ -72,7 +72,7 @@
       </div>
       <div class="ui center aligned grid">
         <div class="eight wide column">
-          <button class="ui mini primary button width-100" routerLink="/check-overtime-com-withdrawal-display">
+          <button class="ui mini primary button width-100" routerLink="/int06-4-2">
             <i class="save icon"></i>
             บันทึก
           </button>
