--- a/workspace/ims-client/src/styles.css
+++ b/workspace/ims-client/src/styles.css
@@ -80,5 +80,9 @@ button.width-100 {
 }
 
 img.image-width {
-    width: 47% !important;
+    width: 16px !important;
+}
+
+img.image-width-18 {
+    width: 18px !important;
 }
