--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-5/int06-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-5/int06-5.component.html
@@ -21,7 +21,7 @@
       </div>
     </div>
 
-    <h2 class="ui header">ตรวจสอบการเบิกค่าเบี้ยเลี้ยง</h2>
+    <h2 class="ui header">ตรวจสอบการเบิกค่าตอบแทนผู้ควบคุมงาน</h2>
 
     <div class="ui top attached header">
       <span>ข้อมูลเจ้าหน้าที่</span>
@@ -48,11 +48,11 @@
           </div>
         </div>
       </div>
-      
+
       <br>
       <div class="ui center aligned grid">
         <div class="eight wide column">
-          <button class="ui mini primary button width-100" routerLink="/int06-3-1">
+          <button class="ui mini primary button width-100" routerLink="/int06-5-1">
             <i class="external icon"></i>
             ตกลง
           </button>
@@ -70,18 +70,18 @@
     </div>
 
     <div class="ui segment" *ngIf="showData">
-      <div class="ui center aligned grid">
-        <div class="eight wide column">
-          <table class="ui small  celled table">
+      <div class="ui center aligned three column grid">
+        <div class="column">
+          <table class="ui small celled table">
             <thead>
               <tr style="text-align: center;">
-                <th style="width: 50%">อัตราเบี้ยเลี้ยง</th>
+                <th style="width: 50%">ประเภทบุคคล</th>
                 <th style="width: 50%">Action</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td style="text-align: right;">120</td>
+                <td style="text-align: right;">บุคคลภายนอก</td>
                 <td style="text-align: center;">
                   <a class="update" href="javascript:;" (click)="popupEditData()">แก้ไข</a>
                   <strong> / </strong>
@@ -89,15 +89,7 @@
                 </td>
               </tr>
               <tr>
-                <td style="text-align: right">240</td>
-                <td style="text-align: center;">
-                  <a class="update" href="javascript:;" (click)="popupEditData()">แก้ไข</a>
-                  <strong> / </strong>
-                  <a class="delete" href="javascript:;">ลบ</a>
-                </td>
-              </tr>
-              <tr>
-                <td style="text-align: right">270</td>
+                <td style="text-align: right">บุคคลภายใน</td>
                 <td style="text-align: center;">
                   <a class="update" href="javascript:;" (click)="popupEditData()">แก้ไข</a>
                   <strong> / </strong>
@@ -115,7 +107,8 @@
             </div>
           </div>
         </div>
-        <div class="eight wide column">
+
+        <div class="column">
           <table class="ui small celled table">
             <thead>
               <tr style="text-align: center;">
@@ -125,7 +118,7 @@
             </thead>
             <tbody>
               <tr>
-                <td>เบิกเบี้ยงเลี้ยง</td>
+                <td style="text-align: right;">เบิกค่าตอบแทนผู้ควบคุมงาน</td>
                 <td style="text-align: center;">
                   <a class="update" href="javascript:;" (click)="popupEditData()">แก้ไข</a>
                   <strong> / </strong>
@@ -133,7 +126,7 @@
                 </td>
               </tr>
               <tr>
-                <td>ปฏิบัติงานนอกเวลา</td>
+                <td style="text-align: right">ปฏิบัติงานนอกเวลา</td>
                 <td style="text-align: center;">
                   <a class="update" href="javascript:;" (click)="popupEditData()">แก้ไข</a>
                   <strong> / </strong>
@@ -141,7 +134,7 @@
                 </td>
               </tr>
               <tr>
-                <td>เดินทางไปราชการอื่น</td>
+                <td style="text-align: right">เดินทางไปราชการอื่น</td>
                 <td style="text-align: center;">
                   <a class="update" href="javascript:;" (click)="popupEditData()">แก้ไข</a>
                   <strong> / </strong>
@@ -149,7 +142,7 @@
                 </td>
               </tr>
               <tr>
-                <td>อยู่เวร</td>
+                <td style="text-align: right">อยู่เวร</td>
                 <td style="text-align: center;">
                   <a class="update" href="javascript:;" (click)="popupEditData()">แก้ไข</a>
                   <strong> / </strong>
@@ -157,7 +150,7 @@
                 </td>
               </tr>
               <tr>
-                <td>ลาป่วย/ลาพักผ่อน</td>
+                <td style="text-align: right">ลาป่วย/ลาพักผ่อน</td>
                 <td style="text-align: center;">
                   <a class="update" href="javascript:;" (click)="popupEditData()">แก้ไข</a>
                   <strong> / </strong>
@@ -175,6 +168,44 @@
             </div>
           </div>
         </div>
+
+        <div class="column">
+          <table class="ui small celled table">
+            <thead>
+              <tr style="text-align: center;">
+                <th style="width: 50%">ประเภทบุคคล</th>
+                <th style="width: 50%">Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td style="text-align: right;">บุคคลภายนอก</td>
+                <td style="text-align: center;">
+                  <a class="update" href="javascript:;" (click)="popupEditData()">แก้ไข</a>
+                  <strong> / </strong>
+                  <a class="delete" href="javascript:;">ลบ</a>
+                </td>
+              </tr>
+              <tr>
+                <td style="text-align: right">บุคคลภายใน</td>
+                <td style="text-align: center;">
+                  <a class="update" href="javascript:;" (click)="popupEditData()">แก้ไข</a>
+                  <strong> / </strong>
+                  <a class="delete" href="javascript:;">ลบ</a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <div class="ui grid">
+            <div class="sixteen wide right aligned column">
+              <button class="ui mini primary button">
+                <i class="add icon"></i>
+                เพิ่ม
+              </button>
+            </div>
+          </div>
+        </div>
+
       </div>
 
       <div class="ui center aligned grid">
@@ -194,10 +225,10 @@
   </div>
 </div>
 
-<div id="modalAllowanceWithdrawal" class="ui modal small hidden transition">
+<div id="modalControllerWithdrawal" class="ui modal small hidden transition">
   <i class="close icon"></i>
   <div class="header">
-    แก้ไขอัตราเบี้ยเลี้ยง
+    แก้ไขประเภทบุคคล
   </div>
 
   <div class="content">
@@ -205,7 +236,7 @@
 
       <div class="inline fields">
         <div class="eight wide field">
-          <label class="custom-label-w-15">อัตราเบี้ยเลี้ยง</label>
+          <label class="custom-label-w-15">ประเภทบุคคล</label>
           <input type="text" value="" />
         </div>
       </div>
@@ -215,11 +246,11 @@
   <div class="actions">
     <div class="ui center aligned grid">
       <div class="six wide column">
-        <button class="ui mini primary button">
+        <button class="ui mini primary button width-100">
           <i class="save icon"></i>
           บันทึก
         </button>
-        <button class="ui mini button" (click)="closePopupEdit()()">
+        <button class="ui mini button width-100" (click)="closePopupEdit()">
           <i class="close icon"></i>
           ปิด
         </button>
