--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -59,7 +59,7 @@
                         <a class="item" [routerLink]="['/int06-3']" routerLinkActive="active">ตรวจสอบการเบิกค่าเบี้ยเลี้ยง</a>
                         <a class="item" [routerLink]="['/int06-4']" routerLinkActive="active">ตรวจสอบการเบิกค่าตอบแทนปฏิบัติงานนอกเวลาราชการ</a>
                         <a class="item" [routerLink]="['/int06-5']" routerLinkActive="active">ตรวจสอบการเบิกค่าตอบแทนผู้ควบคุมงาน</a>
-                        <a class="item" [routerLink]="['/check-personal-com-withdrawal']" routerLinkActive="active">ตรวจสอบการเบิกค่าตอบแทนบุคคลหรือคณะกรรมการ</a>
+                        <a class="item" [routerLink]="['/int06-6']" routerLinkActive="active">ตรวจสอบการเบิกค่าตอบแทนบุคคลหรือคณะกรรมการ</a>
                     </div>
                 </div>
             </div>
